--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,3 +14,17 @@ body,
   left: 0;
   right: 0;
 }
+.main-title {
+  width: 100%;
+  font-size: 28px;
+}
+.navbar-nav.nav-justified > li {
+  float: none;
+}
+.nav-bg {
+  width: 100%;
+  height: 200px;
+  background-color: rgba(255, 255, 255, 0.8);
+  position: absolute;
+  z-index: -1;
+}
