--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -39,8 +39,7 @@
                 ng-model="member.companyname" />
         </div>
         <div class="form-group">
-            <span class="input-group-addon">http://</span>
-            <input type="text" 
+            <input type="url" 
                 class="form-control" 
                 name="companyurl"
                 placeholder="Company URL"
