--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -75,6 +75,67 @@ span {
     line-height: 29px;
 }
 
+.few-info {
+    width: 350px;
+    padding: 10px;
+}
+
+.few-info div {
+    color: black;
+    font-size:14px !important;
+    line-height: 20px;
+    letter-spacing: 1px;
+}
+
+
+.few-info div.member-name {
+   font-family: akzidenz-grotesk_promedium;
+   font-size: 18px !important;
+   padding-bottom: 3px;
+   
+}
+
+.member-company-link {
+    font-family: 'akzidenz-grotesk_proregular';
+    letter-spacing: 1px;
+    font-size: 14px !important;
+    color: #6600FF;
+}
+
+.member-address {
+    padding-bottom: 20px;
+}
+
+.few-thanks-header {
+    padding-bottom: 20px;
+}
+
+.few-thanks-header div {
+    color: black;
+    text-align: center;
+    width: 100%;
+    font-size: 15px !important;
+}
+
+.thanks-line {
+    width: 90%;
+    border-bottom: 1px solid gray;
+    height: 0px;
+    padding-top: 15px;
+}
+
+.tweet-btn-container {
+    width: 100%;
+    text-align: center;
+}
+
+.tweet-btn-container a {
+    color: #6600FF;
+    letter-spacing: 1px;
+    font-size: 15px !important;
+}
+
+
 /*nav overrides*/
 .nav>li>a:hover, 
 .nav>li>a:focus {
@@ -139,7 +200,7 @@ form {
 .page-container {
     position: relative;
     background: transparent;
-    height: 100%;
+    height: 0px;
     width: 100%;
 }
 
