--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -1,3 +1,48 @@
-<div class="col-md-6 col-md-offset-3 top-spacer">
+<div class="col-md-4 col-md-offset-4 top-spacer">
     <h1>Events</h1>
+    <ul class='unstyled'>
+        <li>
+            <h4>March 20, 2014 (7-8PM)</h4>
+            <h4>Santiago, Chile</h4>
+
+            <h3>Brag Pitch Night</h3>
+            We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! 
+
+            Check out Why I’m glad I was forced to brag: https://medium.com/p/253e6d7bd10a
+
+        </li>
+        <li>
+            <h4>January 23, 2014 (6-8PM)</h4>
+            <h4>Santiago, Chile</h4>
+
+            <h3>Small Talk — A Conversation Mixer</h3>
+            https://www.facebook.com/events/448780538556922/
+            https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg
+        </li>
+        <li>
+            <h4>January 27, 2014 (6-8PM)</h4>
+            <h4>San Francisco, CA</h4>
+
+            <h3>Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles</h3>
+            https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles
+            Moderated by Vivek Wadhwa
+            A Collaboration with FEW and General Assembly
+            It's no secret that being a female founder comes with a unique set of challenges. While fundraising can be difficult for all founders, recent studies show an alarmingly higher rate or fundraising success for male founders. Why is that? Is it a confidence issue? Is it unconscious bias telling investors that women are less capable leaders? Are women less likely to sell the hyper-growth storyline that investors crave?
+
+        </li>
+        <li>
+
+            <h4>December 6, 2013 (6–10pm)</h4>
+            <h4>Santiago, Chile</h4>
+
+            <h3>TEDxSantiagoWomen</h3>
+            The first-ever TEDxSantiagoWomen with inspirational talks by Carola Canelo, Montserrat Flores, Josefina Hughes, and special guest Brant Cooper, in a speaker series entitled, “Invented Here.”
+
+            https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg
+
+            Press release: https://medium.com/p/3e18e0261fdc
+            Video playlist (In Spanish): https://www.youtube.com/playlist?list=PLsRNoUx8w3rNDMyxQ3jNQkDIYjlm4cPkq
+            Photos: https://www.facebook.com/sarahhebert32/media_set?set=a.10152093737598324&type=1&l=a96df364a0
+        </li>
+</ul>
 </div>
