--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -1,4 +1,12 @@
 <div class="col-md-4 col-md-offset-4 top-spacer">
+    <div class="row">
+        <div class="col-md-12 participate-intro">
+            <p>Calling all female entrepreneurs! If you’re a female founder or working at an early-stage company, we want you to put yourself on the map.</p>
+            <p>Our aim is to identify and build an open network of women from all around the world who are undertaking new ventures of all disciplines, from healthcare to the arts.</p>
+            <p>Add yourself to the map and join our growing network:</p>
+        </div>
+    </div>
+
     <form role='form'
         name="memberform" 
         ng-submit="add(member)">
