--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -75,6 +75,15 @@ span {
     line-height: 29px;
 }
 
+.participate-intro p {
+    padding-bottom: 20px;
+}
+
+.participate-intro {
+
+}
+
+
 .few-info {
     width: 350px;
     padding: 10px;
@@ -180,8 +189,8 @@ span {
 }
 
 form {
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 
 
