--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -1,3 +1,10 @@
-<div class="col-md-6 col-md-offset-3 top-spacer">
+<div class="col-md-4 col-md-offset-4 top-spacer">
     <h1>Connect</h1>
+    <p>Stay updated on our events and read articles written by the members of FEW</p>
+
+    <p>Our Blog on Medium: medium.com/@holafew</p>
+    <p>Twitter: twitter.com/holafew</p>
+    <p>Facebook: facebook.com/holafew</p>
+    <p>LinkedIn: http://www.linkedin.com/company/female-entrepreneurs-of-the-world</p>
+    <p>Email: holafew@gmail.com</p>
 </div>
