--- a/public/partials/mission.html
+++ b/public/partials/mission.html
@@ -1,4 +1,14 @@
-<div class="col-md-6 col-md-offset-3 top-spacer">
+<div class="col-md-4 col-md-offset-4 top-spacer">
     <h1>Mission</h1>
-    <p>Our mission is...Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium lectorum. Mirum est notare quam littera gothica, quam nunc putamus parum claram, anteposuerit litterarum formas humanitatis per seacula quarta decima et quinta decima. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+    
+    <p>FEW is an international organization that supports gender equality and the advancement of women in entrepreneurship. FEW provides a community for entrepreneurs to share experiences in the hopes that transparency of information will inspire others in their entrepreneurial journey.</p>
+
+    <p>FEW was formed by a self-organized group of female founders from around the world who met through Startup Chile (link). Members of FEW organize workshops, share resources openly, and discuss gender bias, entrepreneurship, and founder dilemmas through regularly published blog articles.</p>
+
+    <p>FEW is by no means a female-only organization and welcome all members regardless of race or gender. Men in particular have been actively involved in since its inception, contributing blog articles and actively participating in events organized by FEW.</p>
+
+    <p>Please contact holafew@gmail.com for press inquiries or general questions.</p>
+
+    <p>(Logo)</p>
+
 </div>
