Styling for individual page views
* Centered headings
* Changed font styles
* Make transparent background work when going directly to a link

--- a/public/partials/connect.html
+++ b/public/partials/connect.html
@@ -1,10 +1,17 @@
 <div class="col-md-4 col-md-offset-4 top-spacer">
-    <h1>Connect</h1>
-    <p>Stay updated on our events and read articles written by the members of FEW</p>
+    <h2>Connect</h2>
+        <div class="col-md-12">
+            <div class="subhead-line center-block"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 section-intro">
+                <p>Stay updated on our events and read articles written by the members of FEW</p>
 
-    <p>Our Blog on Medium: medium.com/@holafew</p>
-    <p>Twitter: twitter.com/holafew</p>
-    <p>Facebook: facebook.com/holafew</p>
-    <p>LinkedIn: http://www.linkedin.com/company/female-entrepreneurs-of-the-world</p>
-    <p>Email: holafew@gmail.com</p>
+                <p>Our Blog on Medium: medium.com/@holafew</p>
+                <p>Twitter: twitter.com/holafew</p>
+                <p>Facebook: facebook.com/holafew</p>
+                <p>LinkedIn: http://www.linkedin.com/company/female-entrepreneurs-of-the-world</p>
+                <p>Email: holafew@gmail.com</p>
+            </div>
+        </div>
 </div>
