--- a/public/partials/events.html
+++ b/public/partials/events.html
@@ -1,48 +1,80 @@
 <div class="col-md-4 col-md-offset-4 top-spacer">
-    <h1>Events</h1>
-    <ul class='unstyled'>
-        <li>
-            <h4>March 20, 2014 (7-8PM)</h4>
-            <h4>Santiago, Chile</h4>
+    <h2>Events</h2>
+        <div class="col-md-12">
+            <div class="subhead-line center-block"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 section-intro">
+                <div class="event-divider">
+                    <h6>March 20, 2014 (7—8PM)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3><a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">Brag Pitch Night</a></h3>
+                    <p>
+                        <h7>We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! Check out Jennifer Blumberg's take on brag pitching, <a href="https://medium.com/p/253e6d7bd10a">"Why I’m glad I was forced to brag"</a>.
+                        </h7>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>January 23, 2014 (6—8PM)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3><a href="https://www.facebook.com/events/448780538556922/">Small Talk—A Conversation Mixer</a></h3>
+                    <p>
+                        <a href="https://www.facebook.com/events/448780538556922/">
+                            <img src="https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg" width="550px" style="padding-top:10px;">
+                        </a>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>January 27, 2014 (6—8PM)</h6>
+                    <h6>San Francisco, CA</h6>
+                    <h3>
+                        <a href="https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles">
+                        Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles & Moderated by Vivek Wadhwa</a>
+                    </h3>
+                    <p>
+                        <h7>It's no secret that being a female founder comes with a unique set of challenges. While fundraising can be difficult for all founders, recent studies show an alarmingly higher rate or fundraising success for male founders. Why is that? Is it a confidence issue? Is it unconscious bias telling investors that women are less capable leaders? Are women less likely to sell the hyper-growth storyline that investors crave? This event was organized by General Assembly and sponsored by FEW.</h7>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>December 6, 2013 (6—10pm)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3><a href="https://medium.com/p/3e18e0261fdc">TEDxSantiagoWomen</a></h3>
+                    <p>
+                        <a href="http://tedxsantiago.com/women.html">
+                            <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg" width="650px" style="padding-top:10px;">
+                        </a>
+                    </p>
+                    <p>
+                        <h7>Chile's first TEDxSantiagoWomen conference took place in Santiago, with inspirational talks by Carola Canelo, Montserrat Flores, Josefina Hughes, and special guest Brant Cooper in a speaker series entitled, “Invented Here.” Read our <a href="https://medium.com/p/3e18e0261fdc">press release</a>, view <a href="https://www.facebook.com/sarahhebert32/media_set?set=a.10152093737598324&type=1&l=a96df364a0">photos of the event</a>, and enjoy the talks <a href="https://www.youtube.com/playlist?list=PLsRNoUx8w3rNDMyxQ3jNQkDIYjlm4cPkq">via video</a> (in Spanish).</h7>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>December 2, 2013 (3—4pm)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3>Women and Fundraising with Gwen Edwards</h3>
+                    <p>
+                        <h7><a href="http://www.gwenedwards.com/">Gwen Edwards</a> is a 30-year veteran of the venture capital space and Director at <a href="http://www.goldenseeds.com/">Golden Seeds</a>, one of the only VC firms focused on funding female led companies. Gwen speaks about the Golden Seeds investment process, unique challenges fundraising as women, and how best to position your business for a successful fundraising process.</h7>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>November 29, 2013 (3—4pm)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3>Women and Fundraising with Freada Kapor Klein</h3>
+                    <p>
+                        <h7>Freada Kapor Klein and her husband, Mitch Kapor, run an early stage investment firm focused on supporting social businesses. Freada speaks about gender bias, unique challenges (and bonuses) women face in the entrepreneurship space, and ways to set yourself up for success. </h7>
+                    </p>
+                </div>
+                <div class="event-divider">
+                    <h6>November 15, 2013 (6—8pm)</h6>
+                    <h6>Santiago, Chile</h6>
+                    <h3><a href="https://medium.com/female-entrepreneurs-of-the-world/f09f80a8cdf1">Brag Pitch Night</a></h3>
+                    <p>
+                        <h7>Show Off Pitch Night is a unique way for the members of FEW to get to know each other better. We've all pitched our businesses a million times, but many women are really uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this. What better way to get super vulnerable and step waaaay outside your comfort zone than with wine and good people?</h7>
+                    </p>
+                </div>
 
-            <h3>Brag Pitch Night</h3>
-            We've all pitched our businesses a million times, but many women are uncomfortable standing up and bragging (showing off, talking about their strengths) in front of others. We want (and need) to get better at this! 
+                                         
 
-            Check out Why I’m glad I was forced to brag: https://medium.com/p/253e6d7bd10a
-
-        </li>
-        <li>
-            <h4>January 23, 2014 (6-8PM)</h4>
-            <h4>Santiago, Chile</h4>
-
-            <h3>Small Talk — A Conversation Mixer</h3>
-            https://www.facebook.com/events/448780538556922/
-            https://fbcdn-sphotos-b-a.akamaihd.net/hphotos-ak-prn1/t31.0-8/883866_10102777883775453_844019930_o.jpg
-        </li>
-        <li>
-            <h4>January 27, 2014 (6-8PM)</h4>
-            <h4>San Francisco, CA</h4>
-
-            <h3>Women in Tech: Fireside Chat with Freada Kapor Klein and Heather Hiles</h3>
-            https://generalassemb.ly/education/women-in-tech-fireside-chat-with-freada-kapor-klein-and-heather-hiles
-            Moderated by Vivek Wadhwa
-            A Collaboration with FEW and General Assembly
-            It's no secret that being a female founder comes with a unique set of challenges. While fundraising can be difficult for all founders, recent studies show an alarmingly higher rate or fundraising success for male founders. Why is that? Is it a confidence issue? Is it unconscious bias telling investors that women are less capable leaders? Are women less likely to sell the hyper-growth storyline that investors crave?
-
-        </li>
-        <li>
-
-            <h4>December 6, 2013 (6–10pm)</h4>
-            <h4>Santiago, Chile</h4>
-
-            <h3>TEDxSantiagoWomen</h3>
-            The first-ever TEDxSantiagoWomen with inspirational talks by Carola Canelo, Montserrat Flores, Josefina Hughes, and special guest Brant Cooper, in a speaker series entitled, “Invented Here.”
-
-            https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-ash3/t31.0-8/1465785_648882455164055_697153128_o.jpg
-
-            Press release: https://medium.com/p/3e18e0261fdc
-            Video playlist (In Spanish): https://www.youtube.com/playlist?list=PLsRNoUx8w3rNDMyxQ3jNQkDIYjlm4cPkq
-            Photos: https://www.facebook.com/sarahhebert32/media_set?set=a.10152093737598324&type=1&l=a96df364a0
-        </li>
-</ul>
+        </div>
+    </div>
 </div>
