--- a/public/partials/principals.html
+++ b/public/partials/principals.html
@@ -1,28 +1,33 @@
 <div class="col-md-4 col-md-offset-4 top-spacer">
-    <h1>Principals</h1>
-    <ul>
-        <li>Andrea Bouch, USA</li>
-        <li>Komal Dadlani, Chile</li>
-        <li>Allison Carmen, USA</li>
-        <li>Danielle Carruthers, Canada</li>
-        <li>Sarah Hebert, Guatemala</li>
-        <li>Lissette Rojas, Venezuela</li>
-        <li>Aparna Sud, USA</li>
-        <li>Andreina Zulueta, Venezuela</li>
-    </ul>
+    <h2>Principals</h2>
+        <div class="col-md-12">
+            <div class="subhead-line center-block"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <p><a href="http://www.linkedin.com/in/andreabouch">Andrea Bouch, US</a></p>
+                <p><a href="http://cl.linkedin.com/in/komaldadlani">Komal Dadlani, Chile</a></p>
+                <p><a href="http://www.linkedin.com/in/allisoncarmen">Allison Carmen, US</a></p>
+                <p><a href="http://ca.linkedin.com/pub/danielle-carruthers/1b/264/845">Danielle Carruthers, Canada</a></p>
+                <p><a href="http://ca.linkedin.com/pub/sarah-h%C3%A9bert/55/868/338">Sarah Hebert, Guatemala</a></p>
+                <p><a href="http://www.linkedin.com/in/leejen">Jen Lee, US</a></p>
+                <p><a href="http://ve.linkedin.com/pub/lissette-rojas/0/825/536">Lissette Rojas, Venezuela</a></p>
+                <p><a href="http://www.linkedin.com/pub/aparna-sud/5a/962/875">Aparna Sud, US</a></p>
+                <p><a href="http://cl.linkedin.com/pub/andre%C3%ADna-zulueta/32/622/140/en">Andreina Zulueta, Venezuela</a></p>
+                
+                <h5>Interested in becoming a Principal of FEW?</h5>
+                <p>(dropdown)</p>
 
-    <h3>Want to become a Principal of FEW?</h3>
-    <p>(dropdown)</p>
+                <p>Becoming a principal is a commitment to FEW’s mission (link), and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
 
-    <p>Becoming a principal is a commitment to FEW’s mission (link), and a larger opportunity to bring people together from all walks of life to discuss issues surrounding gender equality and entrepreneurship. We ask, on a yearly basis, that principals organize one event, contribute an original thought piece to our blog, and share relevant news and updates with the world through your own social networks.</p>
+                <h3>Core Responsibilities:</h3>
 
-    <h3>Core Responsibilities:</h3>
+                <p>Organize one event in your local area that aligns with FEW's mission of advancing women in entrepreneurship and promoting gender equality. This event could be an intimate Q&A, social mixer, conference or gathering of any size, so long as it promotes the organization's overarching goals. Principals are expected to communicate event plans via email to other Principals in advance to receive feedback and advice. We're all in this together and our supportive community is there to guide you in such endeavors.</p>
+                <p>Submit an original thought piece for our blog, while encouraging others to contribute to our written collection of articles. We seek both men and women writers.</p>
+                <p>Promote FEW activities by sharing events, articles, resources through personal networks and inviting others to follow our social media channels.</p>
+                <p>Stay connected with fellow FEW Principals by contributing new ideas, and offering feedback and advice.</p> 
 
-    <p>Organize one event in your local area that aligns with FEW's mission of advancing women in entrepreneurship and promoting gender equality. This event could be an intimate Q&A, social mixer, conference or gathering of any size, so long as it promotes the organization's overarching goals. Principals are expected to communicate event plans via email to other Principals in advance to receive feedback and advice. We're all in this together and our supportive community is there to guide you in such endeavors.</p>
-    <p>Submit an original thought piece for our blog, while encouraging others to contribute to our written collection of articles. We seek both men and women writers.</p>
-    <p>Promote FEW activities by sharing events, articles, resources through personal networks and inviting others to follow our social media channels.</p>
-    <p>Stay connected with fellow FEW Principals by contributing new ideas, and offering feedback and advice.</p> 
-
-    <p>If you’re interested in becoming a principal for F-E-W, please contact us at holafew@gmail.com. We look forward to hearing from you!</p>
-    
+                <p>If you’re interested in becoming a principal for F-E-W, please contact us at holafew@gmail.com. We look forward to hearing from you!</p>
+            </div>
+        </div>
 </div>
