--- a/public/partials/statistics.html
+++ b/public/partials/statistics.html
@@ -1,9 +1,15 @@
 <div class="col-md-4 col-md-offset-4 top-spacer">
-    <h1>Statistics</h1>
-    
-    <h3>Stats as of [January 3, 2013]:</h3>
-    <p>X Contributors from X Cities and X Countries
-    (dropdown)</p>
-    <p>X Startup founded by women
-    (dropdown)</p>
+    <h2>Statistics</h2>
+        <div class="col-md-12">
+            <div class="subhead-line center-block"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h3>Stats as of [January 3, 2013]:</h3>
+                <p>X Contributors from X Cities and X Countries
+                (dropdown)</p>
+                <p>X Startup founded by women
+                (dropdown)</p>
+            </div>
+        </div>
 </div>
