--- a/public/partials/participate.html
+++ b/public/partials/participate.html
@@ -1,80 +1,102 @@
-<div class="col-md-4 col-md-offset-4 top-spacer">
-    <div class="row">
-        <div class="col-md-12 participate-intro">
-            <p>Calling all female entrepreneurs! If you’re a female founder or working at an early-stage company, we want you to put yourself on the map.</p>
-            <p>Our aim is to identify and build an open network of women from all around the world who are undertaking new ventures of all disciplines, from healthcare to the arts.</p>
-            <p>Add yourself to the map and join our growing network:</p>
-        </div>
-    </div>
 
-    <form role='form'
-        name="memberform" 
-        ng-submit="add(member)">
-        <div class="form-group">
-            <div style="height:32px;">
-                <input type="text"
-                    class="col-md-5" 
-                    name="first" 
-                    placeholder="First Name"
-                    ng-model="member.firstname" />
-                <input type="text" 
-                    class="col-md-6 col-md-offset-1" 
-                    name="last" 
-                    placeholder="Last Name"
-                    ng-model="member.lastname" />
+<div class="col-md-4 col-md-offset-4 top-spacer">
+    <h2>Project FEW</h2>
+        <div class="col-md-12">
+            <div class="subhead-line center-block"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 section-intro">
+                <p>Calling all female entrepreneurs! If you’re a female founder or working at an early-stage company, we want you to put yourself on the map.</p>
+                <p>The goal of Project FEW is to identify and build an open network of women from all around the world who are undertaking new ventures of all disciplines, from healthcare to the arts.</p>
+                <p style="font-weight:700;">Add yourself to the map and join our growing network.</p>
             </div>
         </div>
-        <div class="form-group">
-            <input type="email" 
-                class="form-control" 
-                name="email"
-                placeholder="Email Address" 
-                ng-model="member.email" />
-        </div>
-        <div class="form-group">
-            <input type="text" 
-                class="form-control" 
-                name="place" 
-                placeholder="Location"
-                ng-model="member.place" 
-                google-places/>
-        </div>
-        <div class="form-group">
-            <input type="text" 
-                class="form-control" 
-                name="companyname"
-                placeholder="Company Name" 
-                ng-model="member.companyname" />
-        </div>
-        <div class="form-group">
-            <input type="url" 
-                class="form-control" 
-                name="companyurl"
-                placeholder="Company URL"
-                ng-model="member.companyurl" />
-        </div>
-        <div class="form-group">
-            <input type="text" 
-                class="form-control" 
-                name="role"
-                placeholder="Role (ex. Developer, Designer)" 
-                ng-model="member.role" />
-        </div>
-        <div class="form-group">            
-            <textarea class="form-control" 
-                rows="2"
-                name="companydescription"
-                placeholder="Company description (Max 140 characters)" 
-                ng-model="member.companydescription">
-            </textarea>
-        </div>
-        <div class="checkbox">
-          <label>
-              <input type="checkbox"
-                  name="isfemalefounder" 
-                  ng-model="member.isfemalefounder" /> I am a female founder.
-          </label>
-        </div>
-        <button class="btn btn-default" ng-submit="add(member)">Submit</button>                    
-    </form>    
-</div>
+
+        <form role='form'
+            name="memberform" 
+            ng-submit="add(member)">
+            <div class="form-group">
+                <div class="row">
+                    <input type="text"
+                        class="col-md-5" 
+                        name="first" 
+                        placeholder="First Name"
+                        ng-model="member.firstname" />
+                    <input type="text" 
+                        class="col-md-6 col-md-offset-1" 
+                        name="last" 
+                        placeholder="Last Name"
+                        ng-model="member.lastname" />
+                </div>
+            </div>
+                <div class="form-group">
+                    <div class="row">
+                        <input type="email" 
+                            class="col-md-12" 
+                            name="email"
+                            placeholder="Email Address" 
+                            ng-model="member.email" />
+                    </div>
+                </div>
+            <div class="form-group">
+                <div class="row">
+                    <input type="text" 
+                        class="col-md-12" 
+                        name="place" 
+                        placeholder="Location"
+                        ng-model="member.place" 
+                        google-places/>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <input type="text" 
+                        class="col-md-12" 
+                        name="companyname"
+                        placeholder="Company Name" 
+                        ng-model="member.companyname" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <input type="url" 
+                        class="col-md-12" 
+                        name="companyurl"
+                        placeholder="Company URL"
+                        ng-model="member.companyurl" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <input type="text" 
+                        class="col-md-12" 
+                        name="role"
+                        placeholder="Role (ex. Developer, Designer)" 
+                        ng-model="member.role" />
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <textarea class="col-md-12" 
+                        rows="2"
+                        name="companydescription"
+                        placeholder="Company description (Max 140 characters)" 
+                        ng-model="member.companydescription">
+                    </textarea>
+                </div>
+            </div>
+
+            <div class="checkbox" style="font-style:italic; font-size: 15px;">
+              <label>
+                  <input type="checkbox"
+                      name="isfemalefounder" 
+                      ng-model="member.isfemalefounder" /> Please check this box if you are a female founder.
+              </label>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <button class="btn btn-default" ng-submit="add(member)">Submit</button>
+                </div>
+            </div>                
+        </form>    
+    </div>
