--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,10 +47,11 @@ h7 {
   width: 100%;
 }
 .page-container {
-  position: relative;
+  position: absolute;
   background: transparent;
   height: 0px;
   width: 100%;
+  top: 115px;
 }
 .page-container.expanded {
   height: 100%;
@@ -59,8 +60,9 @@ h7 {
   position: absolute;
   background: transparent;
   width: 100%;
-  height: 100%;
   overflow-y: scroll;
+  top: 0px;
+  bottom: 115px;
 }
 .page.ng-enter,
 .page.ng-leave {
